--- a/frontend/src/CSS/VendingMachineCard.css
+++ b/frontend/src/CSS/VendingMachineCard.css
@@ -10,6 +10,7 @@
 /* Container that wraps the entire card */
 .card-container {
     position: relative;
+    flex-direction: column;
     width: 200px;
     height: 250px;
     background-color: transparent;
@@ -128,21 +129,22 @@
 }
 
 /* Layout for rows in the lower portion of the card */
-.lower-card-row {
+.lower-card-list {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     width: 100%;
     justify-content: space-between;
     padding-inline: 0.5rem;
     padding-block-end: 0.5rem;
 }
 
-.lower-card-section {
+.lower-card-row {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     align-items: center;
 }
-.lower-card-section > *:nth-child(1) {
+
+.lower-card-row > *:nth-child(1) {
     width: 1.5rem;
     height: 1.5rem;
     margin-block-end: 0.25rem;
@@ -187,4 +189,8 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+}
+
+.card-container:hover .info-column {
+    display: none; /* Hide the text when hovered */
 }
