--- a/frontend/src/CSS/SearchBar.css
+++ b/frontend/src/CSS/SearchBar.css
@@ -4,14 +4,17 @@
     padding: 0 20px;
     margin: 0 auto;
     display: block;
+    position: relative;
+    flex: 1
 }
 
 .search-form {
     display: flex;
-    width: 100%;
+    width: 60%;
     gap: 12px;
     align-items: center;
     margin: 20px auto 20px;
+    position: relative;
 }
 
 .search-input {
@@ -22,25 +25,39 @@
     border: 1px solid #ccc;
     outline: none;
     transition: all 0.3s ease;
-    min-width: 0;
+    width:100%;
     height: 48px;
     box-sizing: border-box;
 }
 
-.search-button {
-    padding: 12px 24px;
-    font-size: 16px;
-    height: 48px;
-    background-color: #1976d2;
-    color: white;
-    border: none;
+.suggestions-list {
+    position: absolute;
+    top: 100%;
+    width: 100%;
+    margin: 0 auto;
+    background: white;
+    border: 1px solid #ccc;
     border-radius: 8px;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
-    white-space: nowrap;
-    flex-shrink: 0;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    list-style: none;
+    padding: 0;
+    margin-top: 4px;
+    z-index: 10;
+    overflow: hidden;
+    font-size: 16px;
 }
 
-.search-button:hover {
-    background-color: #125a9c;
+.suggestions-list li {
+    width: 100%;
+    padding: 12px 20px;
+    cursor: pointer;
+    transition: background-color 0.2s ease;
+}
+
+.suggestions-list li:hover {
+    background-color: #f5f5f5;
+}
+.input-container {
+    position: relative;  
+    flex: 1;             
 }
