--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -43,11 +43,17 @@ body,
   padding: 10px 16px;
   border: none;
   border-radius: 8px;
-  font-size: 14px;
+  width: 60px;
+  height: 60px;
+  font-size: 24px;
   cursor: pointer;
   z-index: 1000;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
   transition: background-color 0.3s ease;
+  border-radius: 50%;
+  display:flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .login-button:hover {
