--- a/frontend/src/CSS/AddVendingMachine.css
+++ b/frontend/src/CSS/AddVendingMachine.css
@@ -63,18 +63,14 @@ input:checked + .slider:before {
   /* gap: 8px */
 }
 
-.location-button {
+.add-vending-machine-buttons {
   background-color: transparent;
   border: none;
   font-size: 20px;
   cursor: pointer;
-}
-
-.add-vending-machine-save-button {
-  background-color: transparent;
-  border: none;
-  font-size: 20px;
-  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .add-vending-machine-close-button {
